Added gravatar and styled tweets on index.html

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,28 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+	background-color: #;
+	padding-top: 50px;
+}
+
+
+#white-bg {
+	background: #fff;
+	margin-top: 20px;
+}
+
+.tweet {
+	border-bottom: solid 1px #ccc;
+	margin-top: 0;
+	padding: 10px 0;
+}
+
+.tweet:hover {
+	background: #FAFAFA;
+}
+
+.gravatar {
+	padding-right: 10px;
+}
