--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,14 +1,26 @@
 <div class="page-header">
   <h1>Tweets</h1>
+
+
+
 </div>
-  <% @tweets.each do |tweet| %>
-  <h3><%= tweet.user.name %> <small>@<%= tweet.user.username %> - <%= time_ago_in_words(tweet.created_at) + " ago" %></small></h3>
+
+
+<% @tweets.each do |tweet| %>
+  
+<div class="container tweet">
+<div>
+	<%= image_tag tweet.user.gravatar_url, class: 'gravatar pull-left img-rounded' %>
+</div>
+	<h3><%= tweet.user.name %> <small>@<%= tweet.user.username %> - <%= time_ago_in_words(tweet.created_at) + " ago" %></small></h3>
+
   <p><%= tweet.content %></p>
+  
     <% if signed_in? && current_user == tweet.user %>
       <p><%= link_to 'Show', tweet %> | <%= link_to 'Edit', edit_tweet_path(tweet) %> | <%= link_to 'Destroy', tweet, method: :delete, data: { confirm: 'Are you sure?' } %></p>
     <% end %>
+</div>
   <% end %>
 
-<br>
-
-<%= link_to 'New Tweet', new_tweet_path %>
+<br />
+<h4><%= link_to 'New Tweet', new_tweet_path %></h4>
