--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,29 +19,41 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= tweets_path %>"><span class="glyphicon glyphicon-home"></span> Tweety</a>
+      <a class="navbar-brand" href="<%= tweets_path %>"><span class="glyphicon glyphicon-home"> </span> Tweety</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navbar-collapse">
-      <ul class="nav navbar-nav">
-        <li><%= link_to 'New Tweet', new_tweet_path %></li>
-      </ul>
-      <p class="navbar-text pull-right">
+      <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          Logged in as <strong><%= current_user.name %></strong>
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> | 
-          <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><strong><%= current_user.name %></strong> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li>
+              <li class="divider"></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link' %></li>
+            </ul>
+          </li>
         <% else %>
-          <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> | 
-          <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+          <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
+          <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
         <% end %>
+        <form class="navbar-form navbar-right pull-right" role="search">
+          <a href="<%= new_tweet_path %>"><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> New Tweet</button></a></li>
+        </form>
+      </ul>
     </div>
   </div>
 </nav>
 <div class="container">
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
+  <% flash.each do |name, msg| %>
+    <% if msg.is_a?(String) %>
+      <div class="alert alert-<%= name.to_s == 'notice' ? 'success' : 'danger' %>" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <%= content_tag :div, msg, :id => "flash_#{name}" %>
+      </div>
+    <% end %>
+  <% end %>
 <%= yield %>
 </div>
 </body>
