Styled tweet forms

--- a/app/views/tweets/edit.html.erb
+++ b/app/views/tweets/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing tweet</h1>
+<div class="col-md-4">
+<h3>Edit Tweet</h3>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @tweet %> |
-<%= link_to 'Back', tweets_path %>
