--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <div class="container">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="navbar-collapse">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -21,9 +21,8 @@
       </button>
       <a class="navbar-brand" href="<%= tweets_path %>"><span class="glyphicon glyphicon-home"> </span> Tweety</a>
     </div>
-
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="navbar-collapse">
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li class="dropdown">
@@ -38,8 +37,10 @@
           <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
           <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
         <% end %>
-        <form class="navbar-form navbar-right pull-right" role="search">
-          <a href="<%= new_tweet_path %>"><button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> New Tweet</button></a></li>
+        <form class="navbar-form navbar-right" role="search">
+          <a href="<%= new_tweet_path %>">
+            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span> New Tweet</button>
+          </a>
         </form>
       </ul>
     </div>
