--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -11,11 +11,10 @@
     </div>
   <% end %>
 
-  <div class="form-field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+  <div class="form-group col-md-4" style="clear: both">
+    <%= f.text_area :content, { class: "form-control", rows: "5" } %>
   </div>
-  <div class="form-actions">
-    <%= f.button :Submit, class: "btn btn-success" %>
+  <div class="form-group col-md-4" style="clear: both">
+    <%= f.button :Submit, class: "btn btn-success form-control" %>
   </div>
 <% end %>
