--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New tweet</h1>
-
+<div class="col-md-4">
+<h3>New tweet</h3>
+</div>
 <%= render 'form' %>
-
-<%= link_to 'Back', tweets_path %>
